--- a/src/styles/Layout.module.css
+++ b/src/styles/Layout.module.css
@@ -33,7 +33,7 @@
 }
 
 .footer {
-    padding-top:5px;
+    padding-top: 5px;
     width: 100%;
     height: 324px;
     max-width: 1920px;
@@ -63,4 +63,133 @@
     flex-shrink: 0;
     color: #FFF;
     margin-top: 0;
+}
+
+@media screen and (max-width: 1600px) {
+    .content {
+        height: 1200px;
+    }
+    .footer {
+        height: 300px;
+    }
+    .logoImg, .logoText, .email, .github, .copyright {
+        margin-left: 120px;
+    }
+    .logoImg {
+        margin-top: 30px;
+        margin-left: 100px;
+    }
+    .logoText {
+        font-size: 30px;
+    }
+}
+
+@media screen and (max-width: 1280px) {
+    .header {
+        height: 80px;
+    }
+    .content {
+        height: 1000px;
+    }
+    .footer {
+        height: 280px;
+    }
+    .logoImg, .logoText, .email, .github, .copyright {
+        margin-left: 80px;
+    }
+    .logoImg {
+        margin-top: 25px;
+        margin-left: 60px;
+    }
+    .logoText {
+        font-size: 28px;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    .header {
+        height: 70px;
+    }
+    .content {
+        height: 900px;
+    }
+    .footer {
+        height: 250px;
+    }
+    .logoImg, .logoText, .email, .github, .copyright {
+        margin-left: 60px;
+    }
+    .logoImg {
+        margin-top: 20px;
+        margin-left: 50px;
+    }
+    .logoText {
+        font-size: 24px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .header {
+        height: 60px;
+    }
+    .content {
+        height: 800px;
+    }
+    .footer {
+        height: 220px;
+    }
+    .logoImg, .logoText, .email, .github, .copyright {
+        margin-left: 40px;
+    }
+    .logoImg {
+        margin-top: 15px;
+        margin-left: 30px;
+    }
+    .logoText {
+        font-size: 22px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .header {
+        height: 50px;
+        flex-direction: column;
+    }
+    .content {
+        height: 700px;
+    }
+    .footer {
+        height: 200px;
+    }
+    .logoImg, .logoText, .email, .github, .copyright {
+        margin-left: 20px;
+    }
+    .logoImg {
+        margin-top: 10px;
+        margin-left: 20px;
+    }
+    .logoText {
+        font-size: 18px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .header {
+        height: 45px;
+    }
+    .content {
+        height: 600px;
+    }
+    .footer {
+        height: 180px;
+    }
+    .logoImg, .logoText, .email, .github, .copyright {
+        margin-left: 10px;
+    }
+    .logoImg {
+        margin-top: 5px;
+    }
+    .logoText {
+        font-size: 16px;
+    }
 }
