--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -93,3 +93,43 @@ body::-webkit-scrollbar {
     width: 0;
     height: 0;
 }
+
+body {
+    font-size: 16px;
+}
+
+@media screen and (max-width: 1600px) {
+    body {
+        font-size: 14px;
+    }
+}
+
+@media screen and (max-width: 1280px) {
+    body {
+        font-size: 12px;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    body {
+        font-size: 10px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    body {
+        font-size: 9px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    body {
+        font-size: 8px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    body {
+        font-size: 7px;
+    }
+}
