--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -1,10 +1,10 @@
 .headerMenu {
     width: 100%;
-    max-width: 1920px;
+    max-width: 100vw; /* 최대 너비를 화면 너비에 맞춤 */
     height: 5.69rem;
     flex-shrink: 0;
     color: #757575;
-    font-size: 16px;
+    font-size: 0.83vw; /* 상대적인 폰트 크기 */
     font-style: normal;
     font-weight: 500;
     letter-spacing: -0.32px;
@@ -16,7 +16,7 @@
 }
 
 .logo {
-    margin: 17px 109px;
+    margin: 1vh 5.68vw; /* 상대적인 margin */
     width: 183px;
     height: 57px;
     flex-shrink: 0;
@@ -27,23 +27,23 @@
     justify-content: center;
     align-items: center;
     width: auto;
-    height: 72px;
-    padding: 0 20px;
+    height: 3.75vh; /* 상대적인 높이 */
+    padding: 0 1vw; /* 상대적인 padding */
     color: #333;
     text-align: center;
     font-family: 'Noto Sans KR', sans-serif;
-    font-size: 20px;
+    font-size: 1.04vw; /* 상대적인 폰트 크기 */
     font-weight: 400;
     line-height: normal;
     flex-direction: column;
     flex-shrink: 0;
-    margin: 0 10px;
+    margin: 0 0.52vw; /* 상대적인 margin */
 }
 
 .headerLinkA {
     color: #757575;
     text-decoration: none;
-    font-size: 16px;
+    font-size: 0.83vw; /* 상대적인 폰트 크기 */
 }
 
 .headerLinkA:hover {
@@ -56,12 +56,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 100px;
-    padding: 10px 20px;
+    border-radius: 50vw; /* 반응형 둥근 모서리 */
+    padding: 1vh 1.04vw; /* 상대적인 padding */
     color: #555;
     text-align: center;
     font-family: 'Noto Sans KR', sans-serif;
-    font-size: 18px;
+    font-size: 0.94vw; /* 상대적인 폰트 크기 */
     font-weight: 400;
     line-height: normal;
     position: relative;
@@ -70,11 +70,11 @@
     text-decoration: none;
     cursor: pointer;
     margin-left: auto;
-    margin-right: 90px;
+    margin-right: 4.49vw; /* 상대적인 margin */
 }
 
 .headerLinkLogin img {
-    margin-left: 10px;
+    margin-left: 0.52vw; /* 상대적인 margin */
 }
 
 .headerLinkLogin:hover {
@@ -89,41 +89,41 @@
 
 @media screen and (max-width: 1600px) {
     .headerMenu {
-        font-size: 15px;
+        font-size: 0.94vw;
     }
     .logo {
-        margin: 15px 90px;
-        width: 160px;
-        height: 50px;
+        margin: 1vh 5vw;
+        width: 8.33vw;
+        height: 2.78vh;
     }
     .headerLink {
-        font-size: 18px;
-        padding: 0 18px;
+        font-size: 1vw;
+        padding: 0 0.94vw;
     }
     .headerLinkLogin {
-        font-size: 16px;
-        margin-right: 80px;
-        padding: 8px 18px;
+        font-size: 0.88vw;
+        margin-right: 4.17vw;
+        padding: 0.83vh 0.94vw;
     }
 }
 
 @media screen and (max-width: 1280px) {
     .headerMenu {
-        font-size: 14px;
+        font-size: 1.09vw;
     }
     .logo {
-        margin: 12px 70px;
-        width: 140px;
-        height: 45px;
+        margin: 0.83vh 4.17vw;
+        width: 7.29vw;
+        height: 2.34vh;
     }
     .headerLink {
-        font-size: 16px;
-        padding: 0 15px;
+        font-size: 0.94vw;
+        padding: 0 0.78vw;
     }
     .headerLinkLogin {
-        font-size: 15px;
-        margin-right: 60px;
-        padding: 6px 16px;
+        font-size: 0.83vw;
+        margin-right: 3.13vw;
+        padding: 0.63vh 0.78vw;
     }
 }
 
@@ -134,80 +134,81 @@
         align-items: flex-start;
     }
     .logo {
-        margin: 10px 20px;
-        width: 120px;
-        height: 40px;
+        margin: 0.63vh 1.56vw;
+        width: 6.25vw;
+        height: 2.08vh;
     }
     .headerLink {
-        font-size: 14px;
-        padding: 0 10px;
-        margin: 5px 0;
+        font-size: 0.83vw;
+        padding: 0 0.52vw;
+        margin: 0.26vh 0;
     }
     .headerLinkLogin {
-        font-size: 14px;
-        margin-right: 20px;
-        padding: 5px 12px;
+        font-size: 0.83vw;
+        margin-right: 1.56vw;
+        padding: 0.52vh 0.63vw;
     }
 }
 
 @media screen and (max-width: 768px) {
     .headerMenu {
-        font-size: 13px;
-        padding: 0 10px;
+        font-size: 1.17vw;
+        padding: 0 1.04vw;
     }
     .logo {
-        margin: 10px 10px;
-        width: 100px;
-        height: 35px;
+        margin: 1.04vh 1.04vw;
+        width: 5.21vw;
+        height: 1.82vh;
     }
     .headerLink {
-        font-size: 12px;
-        padding: 0 8px;
+        font-size: 0.94vw;
+        padding: 0 0.63vw;
     }
     .headerLinkLogin {
-        font-size: 12px;
-        margin-right: 10px;
-        padding: 5px 10px;
+        font-size: 0.94vw;
+        margin-right: 1.04vw;
+        padding: 0.52vh 0.63vw;
     }
 }
 
 @media screen and (max-width: 480px) {
     .headerMenu {
-        font-size: 12px;
-        padding: 0 5px;
+        font-size: 2.5vw;
+        padding: 0 1.04vw;
     }
     .logo {
-        margin: 8px 5px;
-        width: 80px;
-        height: 30px;
+        margin: 1.04vh 1.04vw;
+        width: 16.67vw;
+        height: 5.21vh;
     }
     .headerLink {
-        font-size: 11px;
-        padding: 0 6px;
+        font-size: 2.08vw;
+        padding: 0 1.04vw;
     }
     .headerLinkLogin {
-        font-size: 11px;
-        margin-right: 5px;
-        padding: 4px 8px;
+        font-size: 2.08vw;
+        margin-right: 1.04vw;
+        padding: 1.04vh 1.04vw;
     }
 }
 
 @media screen and (max-width: 320px) {
     .headerMenu {
-        font-size: 11px;
+        font-size: 3.13vw;
+        padding: 0 1.04vw;
     }
     .logo {
-        margin: 5px 5px;
-        width: 70px;
-        height: 25px;
+        margin: 1.04vh 1.04vw;
+        width: 21.88vw;
+        height: 6.77vh;
     }
     .headerLink {
-        font-size: 10px;
-        padding: 0 5px;
+        font-size: 2.6vw;
+        padding: 0 1.04vw;
     }
     .headerLinkLogin {
-        font-size: 10px;
-        margin-right: 5px;
-        padding: 3px 6px;
+        font-size: 2.6vw;
+        margin-right: 1.04vw;
+        padding: 1.04vh 1.04vw;
     }
 }
