--- a/src/styles/Join.module.css
+++ b/src/styles/Join.module.css
@@ -49,7 +49,7 @@
 }
 
 .inputGroup {
-    width: 100%;
+    width: 480px;
     max-width: 480px;
     height: auto;
     flex-shrink: 0;
@@ -58,7 +58,7 @@
 }
 
 .input {
-    width: 100%;
+    width: 480px;
     max-width: 480px;
     height: 55px;
     border: 1px solid #848282;
@@ -69,7 +69,7 @@
 }
 
 .inputError {
-    width: 100%;
+    width: 480px;
     font-family: Noto Sans KR, sans-serif;
     font-size: 16px;
     max-width: 480px;
@@ -114,7 +114,7 @@
     margin-top: 15px;
     display: flex;
     align-items: center;
-    width: 100%;
+    width: 480px;
     max-width: 480px;
 }
 
@@ -123,7 +123,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 500px;
+    width:500px;
     max-width: 500px;
     height: 55px;
 }
@@ -194,6 +194,7 @@
     opacity: 0.6;
 }
 
+/* 반응형 스타일 시작 */
 @media screen and (max-width: 1600px) {
     .joinContainer {
         max-width: 700px;
@@ -219,6 +220,10 @@
     .input, .inputError, .emailInput, .emailButton, .inputVerification, .verifyButton {
         height: 45px;
         font-size: 14px;
+    }
+    .joinBackground::before {
+        width: 75%;
+        height: 550px;
     }
 }
 
