--- a/src/styles/Layout.module.css
+++ b/src/styles/Layout.module.css
@@ -4,17 +4,20 @@
     flex-shrink: 0;
     border-bottom: 1px solid #C4C4C4;
     backdrop-filter: blur(2px);
+    display: flex;
     flex-direction: column;
+    min-height: 100vh; /* 푸터가 컨텐츠 사이에 들어가지 않도록 */
 }
 
 .header {
     display: flex;
     align-items: center;
-    height: 91px;
+    height: 91px; /* 원래의 높이를 유지 */
     flex-shrink: 0;
     border-bottom: 1px solid #C4C4C4;
     background: #FFFFFF;
     backdrop-filter: blur(2px);
+    width: 100%;
 }
 
 .header_left {
@@ -24,18 +27,21 @@
 .section {
     flex: 1;
     display: flex;
+    width: 100%;
 }
 
 .content {
     width: 100%;
     max-width: 1920px;
-    height: 1336px;
+    height: 1336px; /* 원래의 높이를 유지 */
+    flex-grow: 1;
 }
 
 .footer {
+    margin-top: 64px;
     padding-top: 5px;
     width: 100%;
-    height: 324px;
+    height: 324px; /* 원래의 높이를 유지 */
     max-width: 1920px;
     flex-shrink: 0;
     background: #363636;
