--- a/src/styles/onBoard.module.css
+++ b/src/styles/onBoard.module.css
@@ -202,7 +202,7 @@
 
 .onBoardChooseBtnMore {
     float: right;
-    margin-right: 50px;
+    margin-right:85px;
 }
 
 .onBoardChooseBtn:hover,
@@ -229,7 +229,7 @@
 .sliderImg {
     width: 100%;
     max-width: 400px;
-    height: 280px;
+    height: auto;
     object-fit: cover;
     border-radius: 30px 0 0 0;
 }
@@ -399,7 +399,7 @@
     }
     .chooseRecomend {
         font-size: 6vw;
-        margin-left: 20px;
+        margin-left: 2vw;
     }
     .onBoardingText {
         max-width: 90%;
@@ -422,10 +422,10 @@
     }
     .chooseRecomend {
         font-size: 7vw;
-        margin-left: 10px;
+        margin-left: 1vw;
     }
     .onBoardingText {
-        padding-right: 20px;
+        padding-right: 2vw;
     }
     .viewBtn {
         width: 100%;
@@ -437,10 +437,10 @@
         height: auto;
     }
     .sliderTextP {
-        font-size: 20px;
+        font-size: 5vw;
     }
     .sliderTextPDetail {
-        font-size: 16px;
+        font-size: 4vw;
     }
 }
 
@@ -455,9 +455,9 @@
         font-size: 9vw;
     }
     .sliderTextP {
-        font-size: 18px;
+        font-size: 5vw;
     }
     .sliderTextPDetail {
-        font-size: 14px;
+        font-size: 4vw;
     }
 }
