[24-08-19] 반응형 처리 (#55)

--- a/src/styles/onBoard.module.css
+++ b/src/styles/onBoard.module.css
@@ -10,7 +10,7 @@
     position: absolute;
     width: 80vw;
     height: 601px;
-    border-radius: 0px 0px 0px 200px;
+    border-radius: 0 0 0 200px;
     background: linear-gradient(264deg, #edf9f7 3.98%, #f1f5ff 98.44%);
     top: 10%;
     left: 20%;
@@ -29,35 +29,30 @@
     width: 1980px;
     height: 610px;
     display: inline-block;
-    margin:0;
+    margin: 0;
 }
 
-.onBoardingExplainDiv {
-    color: #fff;
-    font-family: 'Noto Sans KR', sans-serif;
-    font-size: 37px;
-    font-weight: 800;
-    line-height: normal;
-    position: absolute;
-    top: 18%;
-    left: 7%;
-    transform: translateY(-50%);
-    text-align: left;
-    z-index: 1;
-}
-
+.onBoardingExplainDiv,
 .onBoardingExplainP {
     color: #fff;
     font-family: 'Noto Sans KR', sans-serif;
-    font-size: 25px;
-    font-weight: 500;
-    line-height: normal;
     position: absolute;
-    top: 25%;
     left: 7%;
     transform: translateY(-50%);
     text-align: left;
     z-index: 1;
+}
+
+.onBoardingExplainDiv {
+    top: 18%;
+    font-size: 2vw;
+    font-weight: 800;
+}
+
+.onBoardingExplainP {
+    top: 25%;
+    font-size: 1.5vw;
+    font-weight: 500;
 }
 
 .onBoardingView {
@@ -89,7 +84,7 @@
     color: #333;
     outline: none;
     cursor: pointer;
-    margin-right:10px;
+    margin-right: 10px;
 }
 
 .searchInput {
@@ -112,8 +107,8 @@
     flex-shrink: 0;
     border-radius: 20px;
     background: linear-gradient(313deg, #004A55 1.45%, #CCEAD5 98.55%);
-    margin-right:20px;
-    border:none;
+    margin-right: 20px;
+    border: none;
 }
 
 .viewBtn {
@@ -137,7 +132,7 @@
     margin-top: 10px;
     cursor: pointer;
     transition: background-color 0.3s ease;
-    margin-left:37px;
+    margin-left: 37px;
 }
 
 .goLink:hover {
@@ -146,7 +141,7 @@
 
 .time,
 .travel {
-    margin-left:160px;
+    margin-left: 160px;
     object-fit: cover;
     margin-bottom: 10px;
 }
@@ -163,7 +158,7 @@
 }
 
 .onBoardingShow {
-    margin-left:1000px;
+    margin-left: 1000px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -176,9 +171,9 @@
 }
 
 .chooseRecomend {
-    margin-left:50px;
+    margin-left: 50px;
     color: #000;
-    font-size: 40px;
+    font-size: 2vw;
     font-style: normal;
     font-weight: 600;
     line-height: normal;
@@ -202,12 +197,12 @@
 .onBoardChooseBtn {
     margin-left: 49px;
     background: #a7cdcc;
-    color:#FFFFFF;
+    color: #FFFFFF;
 }
 
 .onBoardChooseBtnMore {
     float: right;
-    margin-right: 50px;
+    margin-right:85px;
 }
 
 .onBoardChooseBtn:hover,
@@ -222,7 +217,7 @@
     width: 90%;
     max-width: 400px;
     height: 433px;
-    border-radius: 0px 0px 30px 0px;
+    border-radius: 0 0 30px 0;
     background: #FFFFFF;
     text-align: center;
     margin-left: auto;
@@ -233,10 +228,10 @@
 
 .sliderImg {
     width: 100%;
-    max-width:400px;
-    height: 280px;
+    max-width: 400px;
+    height: auto;
     object-fit: cover;
-    border-radius: 30px 0px 0px 0px;
+    border-radius: 30px 0 0 0;
 }
 
 .sliderTextP {
@@ -247,7 +242,7 @@
     line-height: normal;
     margin-top: 10px;
     text-align: left;
-    margin-left:30px;
+    margin-left: 30px;
 }
 
 .sliderTextPDetail {
@@ -258,7 +253,7 @@
     line-height: normal;
     margin-top: 5px;
     text-align: left;
-    margin-left:30px;
+    margin-left: 30px;
     display: flex;
     align-items: center;
 }
@@ -327,9 +322,8 @@
     max-width: 50%;
 }
 
-
 .viewTitle {
-    margin-left:41px;
+    margin-left: 41px;
     color: #555;
     font-family: Noto Sans KR, sans-serif;
     font-size: 25px;
@@ -342,4 +336,128 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+}
+
+@media screen and (max-width: 1600px) {
+    .onBoardingExplainDiv {
+        font-size: 2.5vw;
+    }
+    .onBoardingExplainP {
+        font-size: 1.8vw;
+    }
+    .chooseRecomend {
+        font-size: 3vw;
+    }
+}
+
+@media screen and (max-width: 1280px) {
+    .onBoardingExplainDiv {
+        font-size: 3vw;
+    }
+    .onBoardingExplainP {
+        font-size: 2vw;
+    }
+    .chooseRecomend {
+        font-size: 4vw;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    .onBoardingExplainDiv {
+        font-size: 4vw;
+    }
+    .onBoardingExplainP {
+        font-size: 2.5vw;
+    }
+    .chooseRecomend {
+        font-size: 5vw;
+    }
+    .onBoardingTop {
+        flex-direction: column;
+        align-items: center;
+    }
+    .onBoardingImg {
+        width: 100%;
+        height: auto;
+    }
+    .onBoardingText {
+        max-width: 80%;
+        text-align: center;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .onBoardingExplainDiv {
+        font-size: 5vw;
+        top: 20%;
+        left: 5%;
+    }
+    .onBoardingExplainP {
+        font-size: 3vw;
+        top: 30%;
+        left: 5%;
+    }
+    .chooseRecomend {
+        font-size: 6vw;
+        margin-left: 2vw;
+    }
+    .onBoardingText {
+        max-width: 90%;
+    }
+    .onBoardingShow {
+        margin-left: 0;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .onBoardingExplainDiv {
+        font-size: 6vw;
+        top: 25%;
+        left: 3%;
+    }
+    .onBoardingExplainP {
+        font-size: 4vw;
+        top: 35%;
+        left: 3%;
+    }
+    .chooseRecomend {
+        font-size: 7vw;
+        margin-left: 1vw;
+    }
+    .onBoardingText {
+        padding-right: 2vw;
+    }
+    .viewBtn {
+        width: 100%;
+        height: auto;
+    }
+    .imgSliderContainer {
+        width: 100%;
+        max-width: none;
+        height: auto;
+    }
+    .sliderTextP {
+        font-size: 5vw;
+    }
+    .sliderTextPDetail {
+        font-size: 4vw;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .onBoardingExplainDiv {
+        font-size: 8vw;
+    }
+    .onBoardingExplainP {
+        font-size: 6vw;
+    }
+    .chooseRecomend {
+        font-size: 9vw;
+    }
+    .sliderTextP {
+        font-size: 5vw;
+    }
+    .sliderTextPDetail {
+        font-size: 4vw;
+    }
 }
