--- a/src/styles/Layout.module.css
+++ b/src/styles/Layout.module.css
@@ -4,17 +4,20 @@
     flex-shrink: 0;
     border-bottom: 1px solid #C4C4C4;
     backdrop-filter: blur(2px);
+    display: flex;
     flex-direction: column;
+    min-height: 100vh; /* 푸터가 컨텐츠 사이에 들어가지 않도록 */
 }
 
 .header {
     display: flex;
     align-items: center;
-    height: 91px;
+    height: 91px; /* 원래의 높이를 유지 */
     flex-shrink: 0;
     border-bottom: 1px solid #C4C4C4;
     background: #FFFFFF;
     backdrop-filter: blur(2px);
+    width: 100%;
 }
 
 .header_left {
@@ -24,18 +27,21 @@
 .section {
     flex: 1;
     display: flex;
+    width: 100%;
 }
 
 .content {
     width: 100%;
     max-width: 1920px;
-    height: 1336px;
+    height: 1336px; /* 원래의 높이를 유지 */
+    flex-grow: 1;
 }
 
 .footer {
-    padding-top:5px;
+    margin-top: 64px;
+    padding-top: 5px;
     width: 100%;
-    height: 324px;
+    height: 324px; /* 원래의 높이를 유지 */
     max-width: 1920px;
     flex-shrink: 0;
     background: #363636;
@@ -63,4 +69,133 @@
     flex-shrink: 0;
     color: #FFF;
     margin-top: 0;
+}
+
+@media screen and (max-width: 1600px) {
+    .content {
+        height: 1200px;
+    }
+    .footer {
+        height: 300px;
+    }
+    .logoImg, .logoText, .email, .github, .copyright {
+        margin-left: 120px;
+    }
+    .logoImg {
+        margin-top: 30px;
+        margin-left: 100px;
+    }
+    .logoText {
+        font-size: 30px;
+    }
+}
+
+@media screen and (max-width: 1280px) {
+    .header {
+        height: 80px;
+    }
+    .content {
+        height: 1000px;
+    }
+    .footer {
+        height: 280px;
+    }
+    .logoImg, .logoText, .email, .github, .copyright {
+        margin-left: 80px;
+    }
+    .logoImg {
+        margin-top: 25px;
+        margin-left: 60px;
+    }
+    .logoText {
+        font-size: 28px;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    .header {
+        height: 70px;
+    }
+    .content {
+        height: 900px;
+    }
+    .footer {
+        height: 250px;
+    }
+    .logoImg, .logoText, .email, .github, .copyright {
+        margin-left: 60px;
+    }
+    .logoImg {
+        margin-top: 20px;
+        margin-left: 50px;
+    }
+    .logoText {
+        font-size: 24px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .header {
+        height: 60px;
+    }
+    .content {
+        height: 800px;
+    }
+    .footer {
+        height: 220px;
+    }
+    .logoImg, .logoText, .email, .github, .copyright {
+        margin-left: 40px;
+    }
+    .logoImg {
+        margin-top: 15px;
+        margin-left: 30px;
+    }
+    .logoText {
+        font-size: 22px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .header {
+        height: 50px;
+        flex-direction: column;
+    }
+    .content {
+        height: 700px;
+    }
+    .footer {
+        height: 200px;
+    }
+    .logoImg, .logoText, .email, .github, .copyright {
+        margin-left: 20px;
+    }
+    .logoImg {
+        margin-top: 10px;
+        margin-left: 20px;
+    }
+    .logoText {
+        font-size: 18px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .header {
+        height: 45px;
+    }
+    .content {
+        height: 600px;
+    }
+    .footer {
+        height: 180px;
+    }
+    .logoImg, .logoText, .email, .github, .copyright {
+        margin-left: 10px;
+    }
+    .logoImg {
+        margin-top: 5px;
+    }
+    .logoText {
+        font-size: 16px;
+    }
 }
