--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -1,10 +1,10 @@
 .headerMenu {
     width: 100%;
-    max-width: 100vw; /* 최대 너비를 화면 너비에 맞춤 */
+    max-width: 100vw;
     height: 5.69rem;
     flex-shrink: 0;
     color: #757575;
-    font-size: 0.83vw; /* 상대적인 폰트 크기 */
+    font-size: 0.83vw;
     font-style: normal;
     font-weight: 500;
     letter-spacing: -0.32px;
@@ -27,23 +27,23 @@
     justify-content: center;
     align-items: center;
     width: auto;
-    height: 3.75vh; /* 상대적인 높이 */
-    padding: 0 1vw; /* 상대적인 padding */
+    height: 3.75vh;
+    padding: 0 1vw;
     color: #333;
     text-align: center;
     font-family: 'Noto Sans KR', sans-serif;
-    font-size: 1.04vw; /* 상대적인 폰트 크기 */
+    font-size: 1.04vw;
     font-weight: 400;
     line-height: normal;
     flex-direction: column;
     flex-shrink: 0;
-    margin: 0 0.52vw; /* 상대적인 margin */
+    margin: 0 0.52vw;
 }
 
 .headerLinkA {
     color: #757575;
     text-decoration: none;
-    font-size: 0.83vw; /* 상대적인 폰트 크기 */
+    font-size: 0.83vw;
 }
 
 .headerLinkA:hover {
@@ -56,12 +56,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 50vw; /* 반응형 둥근 모서리 */
-    padding: 1vh 1.04vw; /* 상대적인 padding */
+    border-radius: 50vw;
+    padding: 1vh 1.04vw;
     color: #555;
     text-align: center;
     font-family: 'Noto Sans KR', sans-serif;
-    font-size: 0.94vw; /* 상대적인 폰트 크기 */
+    font-size: 0.94vw;
     font-weight: 400;
     line-height: normal;
     position: relative;
@@ -70,11 +70,11 @@
     text-decoration: none;
     cursor: pointer;
     margin-left: auto;
-    margin-right: 4.49vw; /* 상대적인 margin */
+    margin-right: 4.49vw;
 }
 
 .headerLinkLogin img {
-    margin-left: 0.52vw; /* 상대적인 margin */
+    margin-left: 0.52vw;
 }
 
 .headerLinkLogin:hover {
