--- a/src/styles/Layout.module.css
+++ b/src/styles/Layout.module.css
@@ -6,13 +6,13 @@
     backdrop-filter: blur(2px);
     display: flex;
     flex-direction: column;
-    min-height: 100vh; /* 푸터가 컨텐츠 사이에 들어가지 않도록 */
+    min-height: 100vh;
 }
 
 .header {
     display: flex;
     align-items: center;
-    height: 91px; /* 원래의 높이를 유지 */
+    height: 91px;
     flex-shrink: 0;
     border-bottom: 1px solid #C4C4C4;
     background: #FFFFFF;
@@ -33,7 +33,7 @@
 .content {
     width: 100%;
     max-width: 1920px;
-    height: 1336px; /* 원래의 높이를 유지 */
+    height: 1336px;
     flex-grow: 1;
 }
 
@@ -41,7 +41,7 @@
     margin-top: 64px;
     padding-top: 5px;
     width: 100%;
-    height: 324px; /* 원래의 높이를 유지 */
+    height: 324px;
     max-width: 1920px;
     flex-shrink: 0;
     background: #363636;
